// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader renders correctly with all nav links 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  display: flex;
  gap: 2rem;
  align-items: center;
}

.c4 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c4:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c0 {
  background: var(--color-background);
  border-bottom: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  height: var(--site-header-height);
  left: 0;
  padding: 0.75rem 0;
  position: fixed;
  right: 0;
  top: 0;
  transition: border-color 0.3s ease,box-shadow 0.3s ease;
  width: 100%;
  z-index: 100;
}

.c5 {
  color: var(--color-headline);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  text-decoration: none;
}

.c7 {
  align-items: center;
  display: none;
  gap: 2rem;
}

.c8 {
  padding-bottom: 2px;
  position: relative;
}

.c8::after {
  background: var(--color-highlight);
  bottom: -4px;
  content: "";
  height: 2px;
  left: 0;
  position: absolute;
  right: 0;
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.25s ease;
}

.c9 {
  align-items: center;
  background: none;
  border: 1px solid color-mix(in srgb, var(--color-headline) 20%, transparent);
  border-radius: 4px;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  font-size: 0.75rem;
  font-weight: 700;
  justify-content: center;
  letter-spacing: 0.08em;
  min-height: 44px;
  min-width: 44px;
  padding: 0.25rem 0.625rem;
  text-transform: uppercase;
  transition: all 0.2s ease;
}

.c9:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c4:hover {
    color: var(--color-tertiary);
  }
}

@media (max-width: 899.98px) {
  .c0 {
    box-shadow: none;
    padding: 0;
  }
}

@media (max-width: 899.98px) {
  .c3 {
    height: var(--site-header-height);
    margin-inline: -4px;
    width: calc(100% + 8px);
  }
}

@media (max-width: 899.98px) {
  .c5 {
    font-size: 18px;
    white-space: nowrap;
  }
}

@media (min-width: 900px) {
  .c7 {
    display: flex;
  }
}

@media (hover: hover) {
  .c8:hover::after {
    transform: scaleX(1);
  }
}

@media (hover: hover) {
  .c9:hover {
    background: color-mix(         in srgb,         var(--color-headline) 5%,         transparent       );
    border-color: color-mix(         in srgb,         var(--color-headline) 40%,         transparent       );
  }
}

@media (max-width: 899.98px) {
  .c9 {
    border-color: color-mix(       in srgb,       var(--color-headline) 22%,       transparent     );
    border-radius: 6px;
    height: 36px;
    min-height: 36px;
    min-width: 36px;
    padding: 0;
    width: 36px;
  }

  .c9:focus-visible {
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <a
          class="c4 c5"
          href="/"
        >
          Andrea Agostini
        </a>
        <div
          class="c6"
        >
          <nav
            aria-label="Main navigation"
            class="c7"
          >
            <a
              class="c4 c8"
              href="#projects"
            >
              Projects
            </a>
            <a
              class="c4 c8"
              href="#skills"
            >
              Skills
            </a>
            <a
              class="c4 c8"
              href="#experience"
            >
              Experience
            </a>
            <a
              class="c4 c8"
              href="#contact"
            >
              Contact
            </a>
          </nav>
          <button
            aria-label="Switch to Italian"
            class="c9"
          >
            IT
          </button>
        </div>
      </div>
    </section>
  </header>
</div>
`;

exports[`SiteHeader renders correctly with no nav links 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  display: flex;
  gap: 2rem;
  align-items: center;
}

.c4 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c4:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c0 {
  background: var(--color-background);
  border-bottom: 1px solid transparent;
  box-sizing: border-box;
  box-shadow: none;
  height: var(--site-header-height);
  left: 0;
  padding: 0.75rem 0;
  position: fixed;
  right: 0;
  top: 0;
  transition: border-color 0.3s ease,box-shadow 0.3s ease;
  width: 100%;
  z-index: 100;
}

.c5 {
  color: var(--color-headline);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  text-decoration: none;
}

.c7 {
  align-items: center;
  display: none;
  gap: 2rem;
}

.c8 {
  align-items: center;
  background: none;
  border: 1px solid color-mix(in srgb, var(--color-headline) 20%, transparent);
  border-radius: 4px;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  font-size: 0.75rem;
  font-weight: 700;
  justify-content: center;
  letter-spacing: 0.08em;
  min-height: 44px;
  min-width: 44px;
  padding: 0.25rem 0.625rem;
  text-transform: uppercase;
  transition: all 0.2s ease;
}

.c8:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c4:hover {
    color: var(--color-tertiary);
  }
}

@media (max-width: 899.98px) {
  .c0 {
    box-shadow: none;
    padding: 0;
  }
}

@media (max-width: 899.98px) {
  .c3 {
    height: var(--site-header-height);
    margin-inline: -4px;
    width: calc(100% + 8px);
  }
}

@media (max-width: 899.98px) {
  .c5 {
    font-size: 18px;
    white-space: nowrap;
  }
}

@media (min-width: 900px) {
  .c7 {
    display: flex;
  }
}

@media (hover: hover) {
  .c8:hover {
    background: color-mix(         in srgb,         var(--color-headline) 5%,         transparent       );
    border-color: color-mix(         in srgb,         var(--color-headline) 40%,         transparent       );
  }
}

@media (max-width: 899.98px) {
  .c8 {
    border-color: color-mix(       in srgb,       var(--color-headline) 22%,       transparent     );
    border-radius: 6px;
    height: 36px;
    min-height: 36px;
    min-width: 36px;
    padding: 0;
    width: 36px;
  }

  .c8:focus-visible {
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <a
          class="c4 c5"
          href="/"
        >
          AA
        </a>
        <div
          class="c6"
        >
          <nav
            aria-label="Main navigation"
            class="c7"
          />
          <button
            aria-label="Switch to Italian"
            class="c8"
          >
            IT
          </button>
        </div>
      </div>
    </section>
  </header>
</div>
`;
